--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tamimza.github.io/portfolio/",
+  "homepage": "https://tamimza.github.io/test2",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
